--- a/ui/package.json
+++ b/ui/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "dev": "vite --port 13100",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bundle": "npm run build && tsx scripts/bundle.ts"
   },
   "dependencies": {
+    "@types/archiver": "^6.0.3",
+    "@types/node": "^24.7.0",
+    "tsx": "^4.20.6",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@tailwindcss/vite": "^1.3.0",
+    "archiver": "^5.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^4.1.14",
