--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,14 @@
     "@types/archiver": "^6.0.3",
     "@types/node": "^24.7.0",
     "tsx": "^4.20.6",
+    "@iconify-json/gravity-ui": "^1.2.5",
+    "@iconify-json/lucide": "^1.2.26",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/radix-icons": "^1.2.2",
+    "@iconify-json/ri": "^1.2.5",
+    "@iconify-json/simple-icons": "^1.2.24",
+    "@iconify-json/tabler": "^1.2.16",
+    "@iconify/vue": "^4.3.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
